# schreier-graphs

./: .gitattributes  .gitignore  LICENSE  README.md
graph_generator/src/: lib.rs
interface_backend/: Cargo.toml
interface_backend/src/: lib.rs
manim/: MagicStrings2.py  about.txt  tree-shuffling.py
output/schreier-spectrum-visualization/: spectrum.py
src/expression-word-action/: expression-word-action.py
src/graph-generator/src/: main.rs
src/graph_generator/: Cargo.toml
src/graph_generator/src/: main.rs
src/iterated-monodromy-action/: Lifts.nb
src/julia-set-graphing/: julia-set-graphing.py
src/schreier-graph-data/: CharPolys.nb  CharPolysNoOutput.nb  schreier-graph-data.py
src/self-similar-group-presentation/: self-similar-group-presentation.py
src/spectrum-visualization/: Schreier Graph Spectrum Plotter v2.py  spectrum-visualization.py
src/tree-automorphism/: tree-automorphism.py
src/web-graph-generator/graph-generator/: Cargo.toml
src/web-graph-generator/graph-interface/: generator.wasm  index.html  interface.js
src/web-graph-generator/interface-backend/src/: lib.rs
