[package]
name = "interface-backend"
version = "0.1.0"
authors = ["Jack Stade <jack.stade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph-generator = {path = "../graph_generator"}

[lib]
crate-type = ["cdylib"]